--- a/vms/src/main/resources/application.properties
+++ b/vms/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=vms
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
