added rabbit and postgres configs

--- a/vms/src/main/resources/application.properties
+++ b/vms/src/main/resources/application.properties
@@ -1,6 +1,29 @@
 spring.application.name=vms
+
+#SWAGGER
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+# POSTGRES
+spring.datasource.url=jdbc:postgresql://localhost:5432/vmsdb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+#JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+#KAFKA
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# RABBITMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+logging.level.org.springframework.amqp=DEBUG
+logging.level.org.springframework.amqp.rabbit.connection=DEBUG
