--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,8 @@
 
     <properties>
         <java.version>21</java.version>
-        <spring.boot.version>3.2.4</spring.boot.version>
+        <spring.boot.version>3.4.4</spring.boot.version>
+        <lombok.version>1.18.30</lombok.version>
     </properties>
 
     <dependencyManagement>
