moving classes to related services -wip

--- a/vending-service/pom.xml
+++ b/vending-service/pom.xml
@@ -87,6 +87,11 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.vm</groupId>
+            <artifactId>vms-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
