added empty purchase-service & updated pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>vms-common</module>
         <module>user-service</module>
         <module>vending-service</module>
+        <module>purchase-service</module>
     </modules>
 
     <properties>
